# genTemplate

./: CMakeLists.txt  GenerateStubSkel.cmake  Robot.conf  config.sh  gen.sh  make.sh  rtc.conf  wuTest.patch  wuTestService.idl  xxx.cpp.patch  xxx.h.patch  xxx_impl.cpp.patch  xxx_impl.h.patch
script/: gui.py  user.py  user.py~
